ingress/files/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-files
spec:
  externalName: 192.168.1.216
  ports:
  - port: 8006
    protocol: TCP
    targetPort: 8006
  sessionAffinity: None
  type: ExternalName
