ingress/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: nas
spec:
  ingressClassName: nginx
  rules:
  - host: files.theramirez.casa
    http:
      paths:
      - backend:
          service:
            name: proxmox-files
            port:
              number: 8006
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - files.theramirez.casa
    secretName: files-casa-tls
